[gd_scene load_steps=11 format=2]

[ext_resource path="res://Nodes/Control/Containers/ScrollGridContainer/scroll_grid_container.gd" type="Script" id=1]
[ext_resource path="res://Assets/Interface/Buttons/png/icon_button.png" type="Texture" id=2]
[ext_resource path="res://Nodes/Control/Containers/column_grid_container.gd" type="Script" id=3]
[ext_resource path="res://Nodes/Drag/Drag.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Interface/Icons/png/caret_right_icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Interface/Icons/png/caret_left_icon.png" type="Texture" id=6]
[ext_resource path="res://Nodes/Control/BlurRect/BlurRoundedRect.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Interface/Panels/png/fade_circle_panel.png" type="Texture" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="ScrollGrid" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridControl" type="Node2D" parent="."]

[node name="Grid" type="GridContainer" parent="GridControl"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 228 )
rect_rotation = 90.0
rect_scale = Vector2( 1, -1 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drag" parent="GridControl" instance=ExtResource( 4 )]
unhandled_only = false
TouchAreaShape = Rect2( 4227, 0, 228, 48 )
snap_axis = 1
allow_camera_scroll = false
camera_edge_margin = Vector2( 0, 0 )
camera_edge_extra_margin_bottom = 0.0

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2

[node name="LeftPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.6 )
margin_right = 24.0
margin_bottom = 360.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_horizontal = 0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurRoundedRect" parent="LeftPanel" instance=ExtResource( 7 )]
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -10.0
margin_right = 16.0
margin_bottom = 9.0
rect_min_size = Vector2( 20, 18 )

[node name="Shadow" type="TextureRect" parent="LeftPanel"]
modulate = Color( 0.662745, 0.686275, 0.713726, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -24.0
margin_right = 30.0
margin_bottom = 24.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBackground" type="TextureRect" parent="LeftPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -6.0
margin_right = -6.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="LeftPanel"]
modulate = Color( 0.490196, 0.52549, 0.545098, 1 )
anchor_right = 0.5
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightPanel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.6 )
margin_left = 216.0
margin_right = 240.0
margin_bottom = 360.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlurRoundedRect" parent="RightPanel" instance=ExtResource( 7 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -9.5
margin_right = 4.0
margin_bottom = 9.5
rect_min_size = Vector2( 20, 18 )

[node name="Shadow2" type="TextureRect" parent="RightPanel"]
modulate = Color( 0.662745, 0.686275, 0.713726, 1 )
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -24.0
margin_right = 18.0
margin_bottom = 24.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBackground" type="TextureRect" parent="RightPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_right = 6.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TextureButton" parent="RightPanel"]
modulate = Color( 0.490196, 0.52549, 0.545098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_right = 6.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="drag_released" from="GridControl/Drag" to="." method="_on_drag_released"]
[connection signal="pressed" from="LeftPanel/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="RightPanel/RightButton" to="." method="_on_RightButton_pressed"]
